[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacex-dragon-repo"
version = "1.0.0"
description = "In-memory library for SpaceX-style rockets and missions"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]